css/main.css
/* ... */
/*切换按钮*/
#nav #switcher {
    zoom: 1;
    overflow: hidden;
    padding-bottom: 16px;
    float: left;
    height: 36px;
}

#nav #switcher li {
    float: left;
    width: 60px;
    border-top: 2px solid #1abc9c;
    border-bottom: 2px solid #1abc9c;
    border-right: 2px solid #1abc9c;
    text-align: center;
    line-height: 2;
    cursor: pointer;
    height: 32px;
    position: relative;
    /*for let IE7*/
    *border-left: 2px solid #1abc9c;
    *margin-left: -2px;
    height: 32px;
}

#nav #switcher li:first-child {
    border-left: 2px solid #1abc9c;
    border-top-left-radius: 6px;
    border-bottom-left-radius: 6px;
}

#nav #switcher li:last-child {
    border-top-right-radius: 6px;
    border-bottom-right-radius: 6px;
}

#nav #switcher li:hover {
    background: rgba(26, 188, 156, 0.1);
}

#nav #switcher li.selected {
    background: #1abc9c;
}

/*三角形*/
#nav #switcher li.selected:after {
    content: "";
    position: absolute;
    width: 0;
    height: 0;
    border-width: 0 15px 15px 15px;
    border-color: transparent transparent #1abc9c transparent;
    border-style: solid;
    top: 36px;
    left: 15px;
}

/*搜索框*/
#nav #search {
    float: right;
    width: auto;
    position: relative;
    background: url("../images/search.png") 0 0 no-repeat transparent;
    width: 230px;
    text-align: right;
    height: 36px;
}

#nav #search:hover {
    background-color: transparent;
}

#nav #search input {
    color: #1abc9c;
    border: 2px solid #1abc9c;
    border-radius: 6px;
    box-shadow: none;
    outline: none;
    font-size: 16px;
    padding: 6px 12px;
    background: #eee;
    width: 170px;
    height: 20px;
}

/*清除按钮*/
#nav #search input:focus {
    background: #fff;
}

#nav #search .clear {
    height: 20px;
    width: 20px;
    background: url("../images/clear.png") 0 0 no-repeat transparent;
    position: absolute;
    right: 10px;
    top: 8px;
    text-indent: 9999px;
    cursor: pointer;
}

/*表格容器*/
#container {
    margin: 0 auto;
    max-width: 960px;
    min-width: 730px;
    border: 8px solid #1abc9c;
    border-radius: 6px;
}

/*表格*/
#container table {
    border-collapse: collapse;
    margin-left: auto;
    margin-right: auto;
    width: 100%;
    table-layout: fixed;
    line-height: 1.4;
}

#container table .errorMsg {
    /*for lte IE7*/
    *display: none;
}

#container table #comments {
    width: 25px;
}

#container table #name {
    width: 38%;
}

#container table #timeJP,
#container table #timeCN {
    width: 15%;
}

#container table thead tr th {
    background: #1abc9c;
    height: 30px;
    vertical-align: -4px;
}

#container table thead tr th p:hover {
    color: #3498db;
    cursor: pointer;
}

#container table thead tr th .ordered {
    text-decoration: underline;
}

#container table tbody tr td .comment {
    width: 20px;
    height: 20px;
    background: url('../images/comment.png') 0 0 no-repeat;
    position: relative;
    margin: 0 auto;
    cursor: pointer;
}

#container table tbody tr td .comment .tooltip {
    color: #000;
    position: absolute;
    width: 150px;
    z-index: 2;
    padding: 5px 7px;
    background: #1abc9c;
    border-radius: 6px;
    margin-left: -72px;
    bottom: 31px;
    cursor: default;
    word-wrap: break-word;
    display: none;
}

#container table tbody tr td .comment .tooltip:after {
    content: "";
    width: 0;
    height: 0;
    border-width: 10px 10px 0 10px;
    border-style: solid;
    border-color: #1abc9c transparent transparent transparent;
    bottom: -10px;
    left: 50%;
    margin-left: -9px;
    position: absolute;
}

/*#container table tbody tr td .comment:hover .tooltip {
    display: block;
}*/

#container table tbody tr td a.new:after {
    content: "new";
    font-size: 12px;
    font-family: sans-serif;
    color: #e74c3c;
    font-weight: normal;
    vertical-align: super;
    position: absolute;
    margin-left: 4px;
}

#container table tbody tr {
    height: 50px;
    border-bottom: 1px solid #ddd;
    padding-left: 20px;
}

#container table tbody tr:hover {
    background: #d7e8e4;
}

#container table tbody tr td {
    text-align: center;
}

/*#container table tbody tr td:first-child a {
    position: relative;
    display: block;
}*/

#container table tbody tr td:last-child {
    padding: 0 5px;
    text-align: center;
    font-size: 15px;
}

#container table tbody tr td .weekDay {
    margin-right: 5px;
}

#container table tbody tr td .links li {
    display: inline-block;
}

/*修复IE7inline-block失效的问题*/
#container table tbody tr td .links li {
    *display: inline;
    *margin-right: 10px;
}

#container table tbody tr td .links li .disabled {
    color: #aaa;
    cursor: default;
}

#container table tbody tr td .links li:after {
    content: "\00A0\007C\00A0";
    vertical-align: 6%;
}

#container table tbody tr td .links .last:after {
    content: "\00A0";
}

#container table tbody tr td .links .empty {
    color: #aaa;
    margin-right: 10px;
}

/*页脚*/
#footer {
    max-width: 980px;
    min-width: 730px;
    text-align: center;
    margin: 10px auto;
    font-size: 14px;
    color: #34495e;
}

#footer a {
    font-size: 14px;
}

#footer a:link,
#footer a:visited,
#footer a:focus,
#footer a:hover,
#footer a:active {
    text-decoration: underline;
    color: #34495e;
}
/* ... */

